kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Substation_Alert__c/Substation_Alert__c.object-meta.xml
<CustomObject>
    <description>新豊洲変電所の設備アラート (TEPCO Vision Demo)</description>
    <label>設備アラート</label>
    <nameField>
        <displayFormat>ALT-{YYYY}-{MM}{DD}-{0000}</displayFormat>
        <label>アラート番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>設備アラート</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>