kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Substation_Alert__c/fields/AF_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AF_Confidence__c</fullName>
    <label>Agentforce 信頼度 (%)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>