kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Substation_Alert__c/fields/AF_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>AF_Reasoning__c</fullName>
    <label>Agentforce 推論ログ</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>