kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Substation_Alert__c/fields/C2H2_PPM__c.field-meta.xml
<CustomField>
    <fullName>C2H2_PPM__c</fullName>
    <label>アセチレン (ppm)</label>
    <precision>10</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>