kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Substation_Alert__c/fields/Households_Affected__c.field-meta.xml
<CustomField>
    <fullName>Households_Affected__c</fullName>
    <label>影響世帯数</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>