kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Substation_Alert__c/fields/Load_Rate__c.field-meta.xml
<CustomField>
    <fullName>Load_Rate__c</fullName>
    <label>負荷率 (%)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>