kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Substation_Alert__c/fields/Oil_Temp__c.field-meta.xml
<CustomField>
    <fullName>Oil_Temp__c</fullName>
    <label>油温 (℃)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>