kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Substation_Alert__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>IoT検知</fullName><default>true</default><label>IoT検知</label></value>
            <value><fullName>AI診断</fullName><default>false</default><label>AI診断</label></value>
            <value><fullName>承認待ち</fullName><default>false</default><label>承認待ち</label></value>
            <value><fullName>承認済</fullName><default>false</default><label>承認済</label></value>
            <value><fullName>対応中</fullName><default>false</default><label>対応中</label></value>
            <value><fullName>復旧済</fullName><default>false</default><label>復旧済</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>