kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Substation_Alert__c/fields/Substation__c.field-meta.xml
<CustomField>
    <fullName>Substation__c</fullName>
    <label>変電所</label>
    <length>120</length>
    <type>Text</type>
</CustomField>